Update azure-pipelines-packer.yml for Azure Pipelines

--- a/packer/azure-pipelines-packer.yml
+++ b/packer/azure-pipelines-packer.yml
@@ -17,7 +17,7 @@ steps:
   displayName: 'ubuntu 18.04 packer validate'
   inputs:
     connectedServiceType: azure
-    connectedServiceAzure: 'packer4711'
+    connectedServiceAzure: 'tf-infra-4711'
     templatePath: ubuntu1804.json
     #force: true|false Force a build to continue if artifacts exist, deletes existing artifacts
     #variables-file: JSON file containing user variables.
@@ -30,7 +30,7 @@ steps:
   displayName: 'ubuntu 18.04 packer build'
   inputs:
     connectedServiceType: azure
-    connectedServiceAzure: 'packer4711'
+    connectedServiceAzure: 'tf-infra-4711'
     templatePath: ubuntu1804.json
     #force: true|false Force a build to continue if artifacts exist, deletes existing artifacts
     #variables-file: JSON file containing user variables.
