Update azure-pipelines-packer.yml for Azure Pipelines

--- a/packer/azure-pipelines-packer.yml
+++ b/packer/azure-pipelines-packer.yml
@@ -18,7 +18,7 @@ steps:
   inputs:
     connectedServiceType: azure
     connectedServiceAzure: 'tf-infra-4711'
-    templatePath: ubuntu1804.json
+    templatePath: $(Pipeline.Workspace)/packer/ubuntu1804.json
     #force: true|false Force a build to continue if artifacts exist, deletes existing artifacts
     #variables-file: JSON file containing user variables.
     #options: Additional options, see Packer Commands (CLI)  for more information.
@@ -31,7 +31,7 @@ steps:
   inputs:
     connectedServiceType: azure
     connectedServiceAzure: 'tf-infra-4711'
-    templatePath: ubuntu1804.json
+    templatePath: $(Pipeline.Workspace)/packer/ubuntu1804.json
     #force: true|false Force a build to continue if artifacts exist, deletes existing artifacts
     #variables-file: JSON file containing user variables.
     #options: Additional options, see Packer Commands (CLI)  for more information.
